--- a/RisEQ/App.xaml
+++ b/RisEQ/App.xaml
@@ -6,7 +6,7 @@
     xmlns:controls="using:Microsoft.UI.Xaml.Controls" 
     xmlns:ToolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:primitives="using:Microsoft.UI.Xaml.Controls.Primitives" 
-    xmlns:animatedvisuals="using:Microsoft.UI.Xaml.Controls.AnimatedVisuals"
+    xmlns:animatedvisuals="using:Microsoft.UI.Xaml.Controls.AnimatedVisuals" RequestedTheme="Light"
     xmlns:contract7Present="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,7)"
     xmlns:contract7NotPresent="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,7)" xmlns:icons="using:Fluent.Icons">
     <Application.Resources>
